# near-roast-agent

./: .env.example  .gitignore  README.md  bun.lockb  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  turbo.json  vercel.json
.github/workflows/: continuous-integration.yml
apps/agent/: package.json
apps/agent/src/app/api/[[...slugs]]/: route.ts
apps/agent/src/app/api/ai-plugin/: route.ts
apps/agent/src/app/data/: interaction-patterns.ts
apps/agent/src/app/lib/: fastnear.ts
apps/agent/src/app/utils/: account-summary.ts
apps/api/: .env.example  package.json  tsconfig.json
apps/api/src/: near-config.ts  near.ts  processor.ts  server.ts
apps/api/src/lib/: api-sdk.ts  contract-sdk.ts  near-contract.ts
apps/indexer/: .gitignore  Cargo.toml  last_processed_block.txt  package.json
apps/indexer/src/: main.rs
apps/web/: index.html  next.config.mjs  package.json
apps/web/src/: App.tsx  index.css
apps/web/src/app/: page.tsx
apps/web/src/app/data/: nft-reputations.ts
apps/web/src/components/: About.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Testimonials.tsx
contract/: Cargo.toml  README.md
contract/src/: lib.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/[[...slugs]]/: route.ts
src/app/api/ai-plugin/: route.ts
src/app/data/: interaction-patterns.ts  nft-reputations.ts  roast-prompt.txt  token-reputations.ts
src/app/lib/: chain-sleuth.ts  fastnear.ts  near-social.ts  open-ai.ts  pikespeak.ts  twitter.ts
src/app/utils/: account-summary.ts  ecosystem-analysis.ts  generate-roast.ts  validate.ts
