[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.79"
inindexer = { version = "1.0.0", features = ["neardata"] }
near-indexer-primitives = "0.23.0"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
log = "0.4.21"
simple_logger = "5.0.0"
reqwest = { version = "0.12.9", features = ["json"] }
serde_json = "1.0.133"
